# datafun-07-ml

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CITATION.cff  INSTRUCTORS.md  LICENSE  POLICIES.md  README.md  SE_MANIFEST.toml  lychee.toml  mkdocs.yaml  pyproject.toml  ruff.strict.toml
.devcontainer/: DEV_CONTAINER.md  devcontainer_OPTION.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  links.yml
data/processed/: csv_ladder_score_stats.txt  danilotraconis_happiness_ladder_stats.txt  danilotraconis_texts_by_age_stats.txt  json_astronauts_by_craft.txt  txt_summary.txt  xlsx_feedback_github_count.txt
data/raw/: astros.json  texts_by_age.csv
docs/: api.md  index.md
notebooks/: danilotraconis_ml.ipynb
queries/: top_customers.sql
src/datafun_03_analytics/: app_case.py  app_danilotraconis.py  case_csv_pipeline.py  case_json_pipeline.py  case_text_pipeline.py  case_xlsx_pipeline.py  danilotraconis_csv_pipeline.py  danilotraconis_happiness_csv_pipeline.py
tests/: test_app_case.py
