[project]
name = "datafun-07-ml"
version = "0.1.0"
description = "Predictive ML project for Foundations of Data Analytics (Module 7)."
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
  "jupyterlab",
  "numpy",
  "pandas",
  "pyarrow",
  "matplotlib",
  "seaborn",
  "scipy",
  "scikit-learn>=1.8.0",
  "ipykernel>=7.2.0",
]
